--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Kasiviswanathan Srikant Iyer </title>
+  <title>Kasiviswanathan Srikant Iyer</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -706,28 +706,28 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>3800 SW 34th Street, HH349, Gainesville, FL 32608</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p><a href="mailto:k.iyer@ufl.edu" class="google-plus">k.iyer@ufl.edu</a></p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+1 352 888 3629</p>
               </div>
 
             </div>
 
           </div>
 
-          <div class="col-lg-8 mt-5 mt-lg-0">
+          <!-- <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="forms/contact2.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -746,11 +746,11 @@
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
+              </div> 
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
 
-          </div>
+          </div> -->
 
         </div>
 
@@ -763,7 +763,7 @@
   <footer id="footer">
     <div class="container">
       <h3>Kasiviswanathan Srikant Iyer</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <!-- <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p> -->
       <div class="social-links">
         <a href="https://github.com/Srikant33" class="twitter"><i class="bx bxl-github"></i></a>
         <a href="https://www.facebook.com/srikant.iyer.7" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -771,16 +771,16 @@
         <a href="mailto:k.iyer@ufl.edu" class="google-plus"><i class="bx bx-mail-send"></i></a>
         <a href="https://www.linkedin.com/in/srikant-iyer/" class="linkedin"><i class="bx bxl-linkedin"></i></a>  
       </div>
-      <div class="copyright">
+      <!-- <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: [license-url] -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/--> 
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+      </div> 
     </div>
   </footer><!-- End Footer -->
 
