--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>3 Feb 1997</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://srikant33.github.io/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1(352)-888-3629</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Gainesville, Florida</span></li>
@@ -126,7 +125,6 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
@@ -298,11 +296,11 @@
               <p><em>University of Florida, Gainesville, FL</em></p>
               <p>Course work:
                 <ul>
-                  <li>Analysis Of Algorithm- Alan Dobra</li>
-                  <li>Distributed operating System Principles- Alan Dobra</li>
+                  <li>Analysis Of Algorithm- Alin Dobra</li>
+                  <li>Distributed operating System Principles- Alin Dobra</li>
                   <li>Database Management System- Markus Schinder</li>
-                  <li>Software Engineering- Alan Dobra</li>
-                  <li>Applied Machine Learning- </li>
+                  <li>Software Engineering- Alin Dobra</li>
+                  <li>Applied Machine Learning- Vincent</li>
                   <li>Mobile Computing- Abdelsalam Helal</li>
                 </ul>
               </p>
