--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <a href="https://www.instagram.com/srikant_3/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="mailto:k.iyer@ufl.edu" class="google-plus"><i class="bx bx-mail-send"></i></a>
         <a href="https://www.linkedin.com/in/srikant-iyer/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="assets/resume.pdf" class="resume"><i class="bx bx-file"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -97,7 +98,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>3 Feb 1997</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>3 Feb 1997</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://srikant33.github.io/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1(352)-888-3629</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Gainesville, Florida</span></li>
@@ -126,7 +127,7 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row">
@@ -209,6 +210,13 @@
               </div>
             </div>
 
+            <div class="progress">
+              <span class="skill">JavaScript <i class="val">40%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
           </div>
 
           <div class="col-lg-6">
@@ -234,24 +242,17 @@
               </div>
             </div>
 
-            <div class="progress">
+            <!-- <div class="progress">
               <span class="skill">Photoshop <i class="val">55%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div>
+            </div> -->
 
             <div class="progress">
               <span class="skill">F# <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">JavaScript <i class="val">40%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -298,11 +299,11 @@
               <p><em>University of Florida, Gainesville, FL</em></p>
               <p>Course work:
                 <ul>
-                  <li>Analysis Of Algorithm- Alan Dobra</li>
-                  <li>Distributed operating System Principles- Alan Dobra</li>
+                  <li>Analysis Of Algorithm- Alin Dobra</li>
+                  <li>Distributed operating System Principles- Alin Dobra</li>
                   <li>Database Management System- Markus Schinder</li>
-                  <li>Software Engineering- Alan Dobra</li>
-                  <li>Applied Machine Learning- </li>
+                  <li>Software Engineering- Alin Dobra</li>
+                  <li>Applied Machine Learning- Vincent Bindschaedler </li>
                   <li>Mobile Computing- Abdelsalam Helal</li>
                 </ul>
               </p>
@@ -786,6 +787,7 @@
         <a href="https://www.instagram.com/srikant_3/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="mailto:k.iyer@ufl.edu" class="google-plus"><i class="bx bx-mail-send"></i></a>
         <a href="https://www.linkedin.com/in/srikant-iyer/" class="linkedin"><i class="bx bxl-linkedin"></i></a>  
+        <a href="assets/resume.pdf" class="resume"><i class="bx bx-file"></i></a>
       </div>
       <!-- <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
