updated resume and work ex

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 
 <head>
+  <style>
+    /* Apply the blur filter to the image */
+    .blurred-image {
+      filter: blur(5px); /* You can adjust the blur strength by changing the '5px' value */
+    }
+  </style>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -58,7 +64,7 @@
         <a href="https://github.com/Srikant33" class="twitter"><i class="bx bxl-github"></i></a>
         <a href="https://www.facebook.com/srikant.iyer.7" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.instagram.com/srikant_3/" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="mailto:k.iyer@ufl.edu" class="google-plus"><i class="bx bx-mail-send"></i></a>
+        <a href="mailto:ksiye@gmail.com" class="google-plus"><i class="bx bx-mail-send"></i></a>
         <a href="https://www.linkedin.com/in/srikant-iyer/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="assets/resume.pdf" class="resume"><i class="bx bx-file"></i></a>
       </div>
@@ -73,18 +79,14 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Currently perusing my master’s in
-            computer and information sciences at
-            University of Florida, with work
-            experience from Tata Consultancy
-            Services as an Assistant Systems
-            Engineer.
+          <p>In my pursuit of excellence, I have consistently demonstrated my commitment to innovation and problem-solving. My professional journey at AMD has not only honed my 
+            technical skills in product development engineering but has also equipped me with the ability to approach challenges with a holistic perspective. 
+            By conducting thorough system-level testing and scripting to characterize next-gen graphics chips, I achieved a remarkable 30% reduction in system crashes, 
+            showcasing my dedication to improving product performance.</p>
+            <p>My academic background at the University of Florida, with a focus on applied machine learning, algorithm analysis, and mobile computing, has empowered me with 
+              a strong foundation in computer science. My experience as a quality testing intern further sharpened my analytical and programming abilities, making me 
+              well-prepared for a role in software development and automation.
           </p>
-            <p>I have a keen interest and practical
-              exposure in the field of Artificial
-              Intelligence and Machine
-              Learning, especially automation.
-            </p>
         </div>
 
         <div class="row">
@@ -100,16 +102,12 @@
                 <ul>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>3 Feb 1997</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://srikant33.github.io/</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1(352)-888-3629</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Gainesville, Florida</span></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>(352)888-3629</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Austin, TX</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong>25<span></span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>k.iyer@ufl.edu</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Looking For:</strong> <span>Internship</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Masters in Computer and Information Sciences</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>ksiye@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Looking For:</strong> <span>Full time roles in Software Development</span></li>
                 </ul>
               </div>
             </div>
@@ -135,7 +133,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1" class="purecounter"></span>
               <p>Happy Clients</p>
             </div>
           </div>
@@ -151,7 +149,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="4600" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="6600" data-purecounter-duration="1" class="purecounter"></span>
               <p>Hours Of Support</p>
             </div>
           </div>
@@ -183,7 +181,7 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">C/C++<i class="val">70%</i></span>
+              <span class="skill">C/ C++<i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -200,6 +198,13 @@
               <span class="skill">Python <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">GO Lang<i class="val">60%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -263,6 +268,13 @@
               </div>
             </div>
 
+            <div class="progress">
+              <span class="skill">Linux<i class="val">40%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
           </div>
 
         </div>
@@ -284,11 +296,11 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Kasiviswanathan Srikant Iyer</h4>
-              <p><em>Innovative and deadline-driven Developer with 2+ years of experience in as a consultant.</em></p>
+              <p><em>I am a recent Computer Science master's graduate with hands-on experience in product development engineering, a strong foundation in computer science, and a proven track record of improving product performance. </em></p>
               <ul>
-                <li>3800 SW 34th Street ,Gainesville, FL</li>
+                <li>West William Cannon Dr, Austin, TX</li>
                 <li>(352) 888-3629</li>
-                <li>k.iyer@ufl.edu</li>
+                <li>ksriye@gmail.com</li>
               </ul>
             </div>
 
@@ -299,13 +311,15 @@
               <p><em>University of Florida, Gainesville, FL</em></p>
               <p>Course work:
                 <ul>
-                  <li>Analysis Of Algorithm- Alin Dobra</li>
-                  <li>Distributed operating System Principles- Alin Dobra</li>
-                  <li>Database Management System- Markus Schinder</li>
-                  <li>Software Engineering- Alin Dobra</li>
-                  <li>Applied Machine Learning- Vincent Bindschaedler </li>
-                  <li>Applied Machine Learning- Vincent</li>
-                  <li>Mobile Computing- Abdelsalam Helal</li>
+                  <li>Analysis Of Algorithm- Dr. Alin Dobra</li>
+                  <li>Distributed operating System Principles- Dr. Alin Dobra</li>
+                  <li>Database Management System- Dr. Markus Schinder</li>
+                  <li>Software Engineering- Dr. Alin Dobra</li>
+                  <li>Applied Machine Learning- Dr. Vincent Bindschaedler </li>
+                  <li>Mobile Computing- Dr. Abdelsalam Helal</li>
+                  <li>AI & CS Education-  Dr. Gardner-McCune</li>
+                  <li>Advance Data Structures-  Dr. Alin Dobra</li>
+                  <li>Engineering Innovation- Dr. Melissa White</li>
                 </ul>
               </p>
             </div>
@@ -329,24 +343,43 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Assistant Systems Engineer</h4>
-              <h5>2019 - 2021</h5>
-              <p><em>TCS, New Delhi, India </em></p>
-              <ul>
-                <li>SAP Basis consultant with 1.9 years experience in the nanotechnology sector</li>
-                <li>Automated 90+ processes in Worksoft automation tool for multiple teams increasing efficiency by 90%</li>
-                <li>Created 20+ new jobs for Basis end, from Service Now requests, using BMC Software for auto scheduling jobs</li>
-                <li>Transitioned DB2 database to HANA optimizing data storage and increasing speed of access by 20%</li>
-                <li>Performed system refresh from in Qalility and Production environments</li>
-                <li>Extensive knowledge in and importing and troubleshooting of Transports from quality to production</li>
-                <li>Security administration - creating users, roles, assign authorizations</li>
-                <li>Job management: Creating, Scheduling background jobs and resolving any terminated jobs.</li>
-                <li>Monitoring CPU utilization, file system, disk space and analyze Top CPU users.</li>
-                <li>Conduct load balancing across Central Instance and active application servers and maintain system profile parameters for performance according to the SAP recommendation.</li>
-                <li>Analyzed system logs, ABAP dump, Table lock, and Update errors.</li>
-                <li>Generated Developer key and SSCR key</li>
-              </ul>
+                <h4>Product Development Engineering II</h4>
+                <h5>June 2023 – Present</h5>
+                <p><em>AMD | Global Operations, Austin, TX</em></p>
+                <ul>
+                    <li>Executed SLT and ATE tests, authored a script for next-gen graphics chip characterization</li>
+                    <li>Enhanced graphic card performance by conducting system-level testing, resulting in a 30% reduction in system crashes</li>
+                </ul>
             </div>
+            <div class="resume-item">
+                <h4>Product Development Engineering Co-Op</h4>
+                <h5>August 2022 – December 2022</h5>
+                <p><em>AMD | Global Operations, Austin, TX</em></p>
+                <ul>
+                    <li>Demonstrated expertise in scripting and advanced hardware management, addressing software issues and contributing to product improvement</li>
+                </ul>
+            </div>
+            <div class="resume-item">
+                <h4>Software Engineering Intern</h4>
+                <h5>January 2022 – August 2022</h5>
+                <p><em>University Of Florida | UF Information Technology, Gainesville, FL</em></p>
+                <ul>
+                    <li>Boosted web accessibility and unit testing in Katalon Studio by creating 100+ automation scripts</li>
+                    <li>Collaborated with 3 teams to develop test scripts for maintaining the university website using Micro Focus ALM</li>
+                    <li>Optimized JMeter script for load handling, making it 7 times faster through BeanShell scripting</li>
+                </ul>
+            </div>
+            <div class="resume-item">
+                <h4>Assistant Systems Administrator</h4>
+                <h5>June 2019 – August 2021</h5>
+                <p><em>TCS | SAP BASIS, New Delhi, India</em></p>
+                <ul>
+                    <li>Automated 90+ processes in Worksoft for multiple teams, increasing efficiency by 90%</li>
+                    <li>Utilized BMC Software to create 20+ new jobs for SAP Basis from Service Now requests, automating job scheduling</li>
+                    <li>Optimized data storage and increased access speed by 20% by transitioning DB2 database to HANA</li>
+                    <li>Conducted load balancing across active application servers for performance enhancement, following SAP directives</li>
+                </ul>
+            </div>        
             <div class="resume-item">
               <h4>Development Trainee</h4>
               <h5>2017 - 2017</h5>
@@ -725,13 +758,13 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>3800 SW 34th Street, HH349, Gainesville, FL 32608</p>
+                <p>West William Cannon Dr, Austin, TX</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p><a href="mailto:k.iyer@ufl.edu" class="google-plus">k.iyer@ufl.edu</a></p>
+                <p><a href="mailto:ksiye@gmail.com" class="google-plus">ksiye@gmail.com</a></p>
               </div>
 
               <div class="phone">
@@ -787,7 +820,7 @@
         <a href="https://github.com/Srikant33" class="twitter"><i class="bx bxl-github"></i></a>
         <a href="https://www.facebook.com/srikant.iyer.7" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.instagram.com/srikant_3/" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="mailto:k.iyer@ufl.edu" class="google-plus"><i class="bx bx-mail-send"></i></a>
+        <a href="mailto:ksiye@gmail.com" class="google-plus"><i class="bx bx-mail-send"></i></a>
         <a href="https://www.linkedin.com/in/srikant-iyer/" class="linkedin"><i class="bx bxl-linkedin"></i></a>  
         <a href="assets/resume.pdf" class="resume"><i class="bx bx-file"></i></a>
       </div>
@@ -799,7 +832,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: [license-url] -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/--> 
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        
       </div> 
     </div>
   </footer><!-- End Footer -->
